Links change to Button
some link change to button pattern

--- a/src/app/file-upload/file-upload.module.html
+++ b/src/app/file-upload/file-upload.module.html
@@ -6,5 +6,5 @@
 
 <div class="form-group">
     <button [disabled]="loading" class="btn btn-primary">Submit</button>
-    <a [routerLink]="['/login']" class="btn btn-link">Cancel/Home</a>
+    <a [routerLink]="['/login']" class="btn btn-link"><button [disabled]="loading" class="btn btn-primary">Cancel/Home</button></a>
 </div>
