--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -35,7 +35,7 @@
         <input class="form-check-input" type="radio" [value]="gender" formControlName="gender">{{gender| titlecase}}</label>
     </div>
     <div class="form-group">
-        <label for="details"></label>
+        <label for="details">Address</label>
         <textarea class="form-control" rows="4" cols="50" formControlName="details"></textarea>
     </div>
     <div class="form-group">
@@ -56,7 +56,7 @@
     </div>
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">Register</button>
-        <a [routerLink]="['/login']" class="btn btn-link">Cancel</a>
+        <a [routerLink]="['/login']" class="btn btn-link"><button [disabled]="loading" class="btn btn-primary">Cancel</button></a>
         <a [routerLink]="['/file-upload']" class="btn btn-link"><button class="btn btn-primary">File Upload</button></a>
     </div>
 
